* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.0.2
- Update to Hiera 5

* Fri Jun 01 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.1
- Initial Release